2006-03-27  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Add additional link flags for bundle
	loading. Patch #4989 from Andrew Sveikauskas.

2006-03-27  Adam Fedor  <fedor@gnu.org>

	* Master/source-distribution.make (svn-tag): Add comment line
	(svn-dist): Simplify checkout.
	* Master/framework.make: Add build-headers rules
	* GNUmakefile: Add special_prefix to GNUSTEP_MAKEFILES

2006-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/README.MinGW: Attempt to clarify versions to be used.

2006-03-13  Adam Fedor  <fedor@gnu.org>

	* Version 1.12.0

2006-03-09  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Add specific EXTACT_CLASS_NAMES_COMMAND.
	Patch #4957 from Andrew Sveikauskas.

2006-03-07  Jeremy Bettis  <jeremy@deadbeef.com>

	* Instance/framework.make: Only copy headers if they changed.
	Delete framework.dll if the compile fails.
	
	* Instance/subproject.make: Only copy headers if they changed
	
	* Master/framework.make: make
	$(FRAMEWORK_NAME:=.all.framework.variables) depend on
	$(FRAMEWORK_NAME:=.build-headers.framework.variables), sometimes
	the copying of header files would happen too late.
	
	* target.make: Added -Wl,--enable-auto-image-base to link command
	for shared libs & bundles on mingw32.

2006-02-23  Adam Fedor  <fedor@gnu.org>

	* Master/source-distribution.make: Add svn tag/dist rules

	* Documentation/userfaq.texi: updates.

2006-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/README.MinGW: Update with information on libxml2

2006-01-05  Adam Fedor  <fedor@gnu.org>

	* Instance/bundle.make: Always link agains all libs when using
	Apple's CC.

2006-01-01  Richard Frith-Macdonald <rfm@gnu.org>

	* openapp.in: Remove IFS setting and search again ... it prevented
	windows paths from working (which was why it was removed in the first
	place).  Also removed insertion of '.' as a path to search ... since
	this is generally considered a security flaw.
	Removed some code to search in odd subdirectories.